--- a/Form login testing 1.html
+++ b/Form login testing 1.html
@@ -3,16 +3,31 @@
 <head>
 <meta charset="UTF-8">
 <title>Register</title>
+
 </head>
 <body>
 
+<h2>Register Account</h2>
 
 <form>
   <label for="fname">Username</label><br>
-  <input type="text" id="fname" name="fname" value=""><br>
+  <input type="text" id="fname" name="fname"><br>
+  <label for="pwd">Password:</label><br>
+  <input type="password" id="pwd" name="pwd"><br>
+  <label for="pwd">Confirm Password:</label><br>
+  <input type="password" id="pwd" name="pwd"><br>
+  <label for="hphone">Handphone No.</label><br>
+  <input type="text" id="hphone" name="hphone"><br>
   <label for="lname">Email</label><br>
-  <input type="text" id="lname" name="lname" value=""><br>
+  <input type="text" id="lname" name="lname"><br><br>
   <input type="submit" value="Submit">
+  <input type="reset"><br><br>
+  <label >Gender</label>
+  <input type="radio" id="male" name="gender" value="male">
+  <label for="male">Male</label>
+  <input type="radio" id="female" name="gender" value="female">
+  <label for="female">Female</label>
+
 
 </form>
 
