--- a/Form login testing 1.html
+++ b/Form login testing 1.html
@@ -20,14 +20,20 @@
   <input type="text" id="hphone" name="hphone"><br>
   <label for="lname">Email</label><br>
   <input type="text" id="lname" name="lname"><br><br>
-  <input type="submit" value="Submit">
-  <input type="reset"><br><br>
   <label >Gender</label>
   <input type="radio" id="male" name="gender" value="male">
   <label for="male">Male</label>
   <input type="radio" id="female" name="gender" value="female">
-  <label for="female">Female</label>
+  <label for="female">Female</label><br><br>
+<button onclick="Submit()">Submit</button>
+<script>
+function Submit() {
+  alert("Register Success");
+}
+</script>
+​  <input type="reset"><br><br>
 
+https://www.w3school.com.cn/js/js_popup.asp
 
 </form>
 
